appId: com.myfrigo
---
- launchApp:
    clearState: true
- tapOn:
    text: "http://localhost:8081"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- waitForAnimationToEnd
- back